[package]
name = "cron-core"
version = "0.1.0"
edition = "2021"
description = "A cron task scheduler library for Rust with async runtime support"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/cron-core"
readme = "README.md"
keywords = ["cron", "scheduler", "task", "async", "tokio"]
categories = ["asynchronous", "command-line-utilities", "scheduling"]
rust-version = "1.70"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"