[package]
name = "cron-core"
version = "0.1.0"
edition = "2024"
description = "A cron task scheduler library for Rust with async runtime support"
authors = ["ming.gz <marketing@lvssn.com>"]
license = "MIT"
repository = "https://github.com/lvssngz/cron-core"
readme = "README.md"
keywords = ["cron", "scheduler", "task", "async", "tokio"]
categories = ["asynchronous", "command-line-utilities", "scheduling"]
rust-version = "1.85"


[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sled = "0.34"
cron = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"